product details added

--- a/Electro/public/Register.html
+++ b/Electro/public/Register.html
@@ -281,9 +281,9 @@
           </div>
         </div>           
         
-        <div class="home">
+        <div class="gohome">
             <a href="../public/index.html">Home</a>
-            <span>> Account</span>
+            <span>> Create Account</span>
         </div>
 
 
