--- a/Electro/public/Login.html
+++ b/Electro/public/Login.html
@@ -281,7 +281,11 @@
           </div>
         </div>           
         
-      </section> 
+        <div class="gohome">
+            <a href="../public/index.html">Home</a>
+            <span>> Account</span>
+        </div>
+
 
 
 
