--- a/Electro/public/index.html
+++ b/Electro/public/index.html
@@ -1248,7 +1248,7 @@
               <p>Newity Product Sample</p>
              <a href=""> <img src="https://cdn.shopify.com/s/files/1/0265/3493/6627/products/asuaslap_7474ecd7-0ce3-45b6-a934-746bcef2c043.png?v=1649400491&width=360" alt=""></a>
               <div class="overlay"></div>
-              <h5>$520.00</h5>
+              <h5>$520.00 </h5>
             </div>
             </div>
             <div class="swiper-slide">
@@ -1257,7 +1257,7 @@
               <p>Newity Product Sample</p>
               <img src="https://cdn.shopify.com/s/files/1/0265/3493/6627/products/goldPhone_4d019155-e7a9-4072-8d7a-df659785f417.png?v=1649400462&width=360" alt="">
               <div class="overlay"></div>
-              <h5>$650.00</h5>
+              <h5>$650.00 <span>$200.00</span></h5>
             </div>
             </div>
             <div class="swiper-slide">
@@ -1266,7 +1266,7 @@
               <p>Newity Product Sample</p>
               <img src="https://cdn.shopify.com/s/files/1/0265/3493/6627/products/printer_e0a36a10-e05c-48ae-803e-dbae21ff92a6.png?v=1649400757&width=360" alt="">
               <div class="overlay"></div>
-              <h5>$35.00</h5>
+              <h5>$35.00 <span>55.00</span></h5>
             </div>
             </div>
             <div class="swiper-slide">
